--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "jest": "^26.6.3",
+    "jest-html-reporter": "^3.3.0",
+    "jest-junit": "^12.0.0",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
